tests/snapshots/errors/generic_struct_unknown_field.mc
// Error: accessing unknown field on generic struct

struct Box<T> {
    value: T
}

let b = Box { value: 42 };
let x = b.unknown;
